--- a/test.html
+++ b/test.html
@@ -1,21 +1,54 @@
+<!DOCTYPE html>
+<html lang="en">
 
-from datetime import datetime, date
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <title>Document</title>
+    <style>
+        
+    </style>
+</head>
 
-t1 = date(year = 2020, month = 6, day = 1)
-t2 = date(year = 2019, month = 7, day = 26)
-t3 = t1 - t2
+<body>
+    <div class="container">
 
-t4 = datetime(year = 2020, month = 6, day = 1, hour = 10, minute = 30, second = 45)
-t5 = datetime(year = 2019, month = 7, day = 26, hour = 4, minute = 20, second = 25)
-t6 = t4 - t5
+        <form>
+            <div class="form-group">
+                <label for="exampleInputEmail1">Email address</label>
+                <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                    placeholder="Enter email">
+                <b id="emailHelp1" class="form-text text-danger"></b>
+            </div>
+            <div class="form-group">
+                <label for="exampleInputPassword1">Password</label>
+                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                <small id="emailHelp2" class="form-text text-muted"></small>
+            </div>
 
-print("t3 =", t3)
-print("type of t3 =", type(t3)) 
-print("t6 =", t6)
-print("type of t6 =", type(t6))  
+            <button type="submit" class="btn btn-primary" onclick="callMe()">Submit</button>
+        </form>
+    </div>
+    <script>
+        function callMe() {
+            var x = document.getElementById("exampleInputEmail1").value;
+            if (x == "") {
+                alert("input field cant be empty");
+                // console.log("ok done");
+            }
+            else if (x.length < 10) {
+                // console.log("Email is not valid")
+                alert("mail is not valid ")
+                // document.getElementById("emailHelp1").innerHTML = "incorrect email"
+            }
+        
 
+        }
 
-current = datetime.now() # current date and time
+    </script>
+</body>
 
-year = current.strftime("%Y")
-print("year:", year)
+</html>
